modules/gdscript/tests/scripts/analyzer/errors/not_found_type.gd
func test():
	var foo: Foo
	print('not ok')
